added option to generate jre using jlink