@@ -5,14 +5,21 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.Random;
+import java.util.function.Function;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
+import org.luke.jwin.app.Command;
 import org.luke.jwin.app.Jwin;
 
 import javafx.application.Platform;
+import javafx.geometry.Pos;
+import javafx.scene.control.Hyperlink;
 import javafx.scene.control.ProgressBar;
+import javafx.scene.paint.Color;
 import javafx.stage.DirectoryChooser;
 import javafx.stage.FileChooser;
 import javafx.stage.FileChooser.ExtensionFilter;
@@ -20,7 +27,7 @@ import javafx.stage.Stage;
 
 public class JreParam extends JavaParam {
 
-	public JreParam(Stage ps) {
+	public JreParam(Stage ps, ClasspathParam cp, JdkParam jdk, DependenciesParam dependencies, MainClassParam mc) {
 		super("Jre (will be packed with your app)");
 
 		DirectoryChooser dc = new DirectoryChooser();
@@ -39,8 +46,118 @@ public class JreParam extends JavaParam {
 				set(file);
 			}
 		});
+
+		Hyperlink generateFromJdk = new Hyperlink("Generate using jlink");
+		generateFromJdk.setTextFill(Color.CYAN.darker().darker());
+		root.setSpacing(5);
+		root.setAlignment(Pos.CENTER_RIGHT);
+		root.getChildren().add(1, generateFromJdk);
+
+		generateFromJdk.setOnAction(e -> generateFromJdk(cp, jdk, dependencies, mc));
 	}
-	
+
+	public void generateFromJdk(ClasspathParam cp, JdkParam jdk, DependenciesParam dependencies, MainClassParam mc) {
+		startLoading();
+
+		new Thread(() -> {
+
+			Runnable cancel = this::stopLoading;
+			Runnable invalidJdk = () -> {
+				cancel.run();
+				Jwin.error("Invalid jdk", "The jdk you have specified can not be used to generate a jre");
+			};
+
+			if (jdk.getValue() == null) {
+				cancel.run();
+				Jwin.error("Missing Jdk", "You didn't specify a jdk");
+				return;
+			}
+
+			if (!jdk.isJdk()) {
+				invalidJdk.run();
+				return;
+			}
+
+			File jlink = new File(jdk.getValue().getAbsolutePath().concat("/bin/jlink.exe"));
+			File jdeps = new File(jdk.getValue().getAbsolutePath().concat("/bin/jdeps.exe"));
+			if (!jlink.exists() || !jdeps.exists()) {
+				invalidJdk.run();
+				return;
+			}
+
+			ArrayList<String> deps = new ArrayList<>();
+
+			File preGen = new File(System.getProperty("java.io.tmpdir") + "/jwin_preGen_" + new Random().nextInt(9999));
+			preGen.mkdir();
+
+			File preGenLibs = dependencies.copy(preGen, null);
+
+			File preGenBin = cp.compile(preGen, preGenLibs, jdk.getValue(), mc.getValue().getValue(), null);
+			File jdkBin = new File(jdk.getValue().getAbsolutePath().concat("/bin"));
+			try {
+
+				Function<String, Boolean> isValid = (dep) -> {
+					return dep.indexOf("java.") == 0 || dep.indexOf("jdk.") == 0;
+				};
+				// analyze code for module dependencies
+				Command analCode = new Command(line -> {
+					String[] parts = line.split("\\s+");
+
+					if (parts.length == 3) {
+						String dep = parts[parts.length - 1];
+						
+						if (!deps.contains(dep) && isValid.apply(dep).booleanValue()) {
+							deps.add(dep);
+						}
+					}
+				}, "cmd", "/C", "jdeps -cp \"" + preGenBin.getAbsolutePath() + "\" --module-path \""
+						+ preGenLibs.getAbsolutePath() + "\" \"" + preGenBin.getAbsolutePath() + "\"");
+
+				analCode.execute(jdkBin).waitFor();
+				deps.remove("bin");
+
+				System.out.println("******************************");
+				// analyze libs for moduleDependencies
+				StringBuilder sb = new StringBuilder();
+				for (File lib : preGenLibs.listFiles()) {
+					sb.append(" \"").append(lib.getAbsolutePath()).append("\"");
+				}
+
+				Command analLibs = new Command(line -> {
+					String[] parts = line.split("\\s+");
+					if (parts.length == 3) {
+						String dep = parts[parts.length - 1];
+
+						if (!deps.contains(dep) && isValid.apply(dep).booleanValue()) {
+							deps.add(dep);
+						}
+					}
+				}, "cmd", "/c", "jdeps" + sb);
+				analLibs.execute(jdkBin).waitFor();
+
+				deps.forEach(dep -> {
+					System.out.println(dep);
+				});
+				
+				Command gen = new Command("cmd", "/c",
+						"jlink --module-path \"" + preGenLibs.getAbsolutePath() + "\" --add-modules "
+								+ String.join(",", deps) + " --output \"" + preGen.getAbsolutePath().concat("/rt")
+								+ "\"");
+
+				gen.execute(jdkBin).waitFor();
+				
+				set(new File(preGen.getAbsolutePath().concat("/rt")));
+
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+				Thread.currentThread().interrupt();
+			}
+
+			Platform.runLater(this::stopLoading);
+
+		}).start();
+	}
+
 	public void copy(File preBuild, ProgressBar progress) {
 		File preBuildRt = new File(preBuild.getAbsolutePath().concat("/rt"));
 		preBuildRt.mkdir();
@@ -74,8 +191,7 @@ public class JreParam extends JavaParam {
 
 						if (!newName.isBlank()) {
 							if (entry.isDirectory()) {
-								File entryDir = new File(
-										preBuildRt.getAbsolutePath().concat("/").concat(newName));
+								File entryDir = new File(preBuildRt.getAbsolutePath().concat("/").concat(newName));
 								entryDir.mkdir();
 							} else {
 								try {
@@ -90,8 +206,7 @@ public class JreParam extends JavaParam {
 							}
 						}
 
-						Platform.runLater(
-								() -> progress.setProgress(.2 + (copyCount[0] / (double) ec) * .2));
+						Platform.runLater(() -> progress.setProgress(.2 + (copyCount[0] / (double) ec) * .2));
 					});
 				}
 
